--- a/Craft_The_World.vcxproj
+++ b/Craft_The_World.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
