--- a/Craft_The_World.vcxproj.filters
+++ b/Craft_The_World.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="Map.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Start_Sprites.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
