--- a/Craft_The_World.vcxproj.filters
+++ b/Craft_The_World.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="Start_Sprites.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="MapTiles.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
